# sur-protocol-solana

./: .gitignore  Anchor.toml  README.md  package.json
.github/workflows/: anchor-test.yml
clients/api/: .env.example  README.md  package.json
clients/api/db/: schema.sql
clients/api/src/: config.ts  db.ts  indexer.ts  points.ts  server.ts
clients/sdk/: README.md  package.json  tsconfig.json  tsconfig.test.json
clients/sdk/src/: index.ts  pdas.ts  program-ids.ts
clients/sdk/src/views/: order_settlement.ts  perp_engine_view.test.ts
clients/web/: package.json  tailwind.config.ts
clients/web/app/: global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts
clients/web/app/agents/: layout.tsx  page.tsx
clients/web/app/darkpool/: layout.tsx  page.tsx
clients/web/app/dashboard/: layout.tsx  page.tsx
clients/web/app/docs/: layout.tsx  page.tsx
clients/web/app/lab/: layout.tsx  page.tsx
clients/web/app/markets/: page.tsx
clients/web/app/portfolio/: layout.tsx  page.tsx
clients/web/app/privacy/: layout.tsx  page.tsx
clients/web/app/support/: layout.tsx  page.tsx
clients/web/app/terms/: layout.tsx  page.tsx
clients/web/app/test-programs/: layout.tsx  page.tsx
clients/web/app/trade/: layout.tsx  page.tsx
clients/web/app/vaults/: page.tsx
clients/web/hooks/: use-sur-programs.ts
clients/web/idls/: a2a_darkpool.json  auto_deleveraging.json  collateral_manager.json  insurance_fund.json  liquidator.json  oracle_router.json  order_settlement.json  perp_engine.json  perp_vault.json  sur_timelock.json  trading_vault.json
clients/web/lib/: anchor.ts  candles.ts  chart-indicators.ts  constants.ts  demo-orderbook.ts  devnet-constants.ts  explorer.ts  format-error.ts  formatters.ts  front-types.ts  i18n.ts  idls.ts  indicators.ts  links.ts  market-catalog.ts  markets.ts  mcp-tools.ts  pdas.ts  program-ids.ts  trading-store.ts  trading-zustand.ts
docs/: ANNOUNCEMENT-DRAFT.md  AUDIT-REPORT.md  AUDIT-ROADMAP.md  DEVNET-GOLDEN-PATH.md  KNOWN-ISSUES.md  PHASES.md  POINTS-SYSTEM.md  SUR-ADAPTER-DIAGNOSIS.md  SUR-LOCALNET-SPIKE.md
docs/audit/: 2026-07-21-AUDIT-SUMMARY.md  2026-07-21-a2a_darkpool-findings.md  2026-07-21-collateral_manager-findings.md  2026-07-21-order_settlement-findings.md  2026-07-21-perp-engine-findings.md  2026-07-21-perp-vault-findings.md  2026-07-21-trading_vault-findings.md  TEST-STATUS.md
idl/: a2a_darkpool.json  auto_deleveraging.json  collateral_manager.json  insurance_fund.json  liquidator.json  oracle_router.json  order_settlement.json  perp_engine.json  perp_vault.json  sur_timelock.json  trading_vault.json
programs/a2a_darkpool/: ARCHITECTURE.md  Cargo.toml  MAPPING.md
programs/a2a_darkpool/src/: errors.rs  events.rs  lib.rs  state.rs
programs/a2a_darkpool/src/instructions/: accept_and_settle.rs  admin.rs  cancel_intent.rs  cancel_response.rs  mod.rs  post_intent.rs  post_response.rs
programs/auto_deleveraging/: Cargo.toml
programs/auto_deleveraging/src/: errors.rs  events.rs  lib.rs  state.rs
programs/auto_deleveraging/src/instructions/: admin.rs  cpi_util.rs  execute_adl.rs  mod.rs  operator_admin.rs
programs/collateral_manager/: Cargo.toml
programs/collateral_manager/src/: errors.rs  events.rs  lib.rs  state.rs
programs/collateral_manager/src/instructions/: admin.rs  collateral_admin.rs  deposit.rs  mod.rs  operator_admin.rs  update_price.rs  withdraw.rs
programs/insurance_fund/: Cargo.toml
programs/insurance_fund/src/: errors.rs  events.rs  lib.rs  state.rs
programs/insurance_fund/src/instructions/: admin.rs  bootstrap_pool.rs  cpi_util.rs  mod.rs  operator_admin.rs  record_bad_debt.rs  reward.rs
programs/liquidator/: Cargo.toml
programs/liquidator/src/: errors.rs  events.rs  lib.rs  state.rs
programs/liquidator/src/instructions/: admin.rs  cpi_util.rs  liquidate.rs  mod.rs
programs/oracle_router/: Cargo.toml
programs/oracle_router/src/: errors.rs  events.rs  lib.rs  state.rs
programs/oracle_router/src/instructions/: admin.rs  feed.rs  mod.rs  operator_admin.rs  push_price.rs
programs/order_settlement/: Cargo.toml
programs/order_settlement/src/: errors.rs  events.rs  lib.rs  signature.rs  state.rs
programs/order_settlement/src/instructions/: admin.rs  commit_order.rs  cpi_util.rs  mod.rs  operator_admin.rs  settle.rs
programs/perp_engine/: Cargo.toml
programs/perp_engine/src/: errors.rs  events.rs  lib.rs  state.rs
programs/perp_engine/src/instructions/: admin.rs  bootstrap_pool.rs  close_position.rs  cpi_util.rs  liquidate_position.rs  market.rs  mod.rs  open_position.rs  operator_admin.rs  reduce_position.rs  update_mark_price.rs
programs/perp_vault/: Cargo.toml
programs/perp_vault/src/: errors.rs  events.rs  lib.rs  state.rs
programs/perp_vault/src/instructions/: admin.rs  collateral.rs  deposit.rs  internal_transfer.rs  mod.rs  operator_admin.rs  withdraw.rs
programs/sur_timelock/: Cargo.toml
programs/sur_timelock/src/: errors.rs  events.rs  lib.rs  state.rs
programs/sur_timelock/src/instructions/: admin.rs  mod.rs  queue_exec.rs
programs/trading_vault/: Cargo.toml
programs/trading_vault/src/: errors.rs  events.rs  lib.rs  state.rs
programs/trading_vault/src/instructions/: admin.rs  cpi_util.rs  deposit.rs  equity.rs  fees.rs  manager_trade.rs  mod.rs  vault_admin.rs  withdraw.rs
scripts/: check-sbpfv3.sh  devnet-init.ts  devnet-state.json  golden-path-cli.ts  register-operator.ts  sur-adapter-probe.ts  transfer-test-usdc.ts
tests/: 02_perp_engine.ts  03_oracle_router.ts  04_a2a_darkpool.ts  05_sur_timelock.ts  06_liquidator.ts  07_insurance_fund.ts  08_auto_deleveraging.ts  09_collateral_manager.ts  10_close_position_strand_red.ts  10_trading_vault.ts  11_order_settlement.ts  12_vault_alias_mint_red.ts  oracle_router.ts  perp_engine.ts  perp_vault.ts
types/: a2a_darkpool.ts  auto_deleveraging.ts  collateral_manager.ts  insurance_fund.ts  liquidator.ts  oracle_router.ts  order_settlement.ts  perp_engine.ts  perp_vault.ts  sur_timelock.ts  trading_vault.ts
(+80 files in other folders)
