[package]
name = "liquidator"
version = "0.1.0"
description = "SUR Protocol — permissionless liquidator. Anyone can call to close undercollateralized positions; engine handles the actual close. Solana port of Liquidator.sol with manual invoke_signed CPI to perp_engine.liquidate_position."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liquidator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
