[package]
name = "perp_vault"
version = "0.1.0"
description = "SUR Protocol — PerpVault. Custodial USDC vault with collateral splitting, operator-based settlement transfers, and yield-bearing collateral credits. Solana port of PerpVault.sol."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perp_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
