[package]
name = "sur_timelock"
version = "0.1.0"
description = "SUR Protocol — Timelock controller. Enforces a delay on admin operations except emergency pause. Solana port of SurTimelock.sol with Solana-native instruction queueing (raw EVM target.call(bytes) semantics replaced with structured QueuedTx PDA + invoke_signed at execute)."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sur_timelock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
