[package]
name = "trading_vault"
version = "0.1.0"
description = "SUR Protocol — TradingVault. Pooled HLP-style trading vaults: depositors share manager PnL pro-rata. Solana port of TradingVault.sol."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["idl-build"] }
